force-app/main/default/objects/Contractor_Incident__c/Contractor_Incident__c.object-meta.xml
<CustomObject>
    <description>Tracks when contractors were used.  CI (Contractor Incident) records are usually created when an email sent to the Contractor_Incident_Receiver email service,  Agentforce extracts the incident data into a CI record</description>
    <label>Contractor Incident</label>
    <nameField>
        <displayFormat>CI-{000}</displayFormat>
        <label>Contractor Incident</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractor Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>