force-app/main/default/objects/Contractor_Incident__c/fields/Awaabs_Law__c.field-meta.xml
<CustomField>
    <fullName>Awaabs_Law__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaabs Law</label>
    <type>Checkbox</type>
</CustomField>