force-app/main/default/objects/Contractor_Incident__c/fields/Contractor_Group__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Group__c</fullName>
    <label>Contractor Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>