force-app/main/default/objects/Contractor_Incident__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <label>Customer Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>