force-app/main/default/objects/Contractor_Incident__c/fields/Decant__c.field-meta.xml
<CustomField>
    <fullName>Decant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decant</label>
    <type>Checkbox</type>
</CustomField>