force-app/main/default/objects/Contractor_Incident__c/fields/Decant_Address__c.field-meta.xml
<CustomField>
    <fullName>Decant_Address__c</fullName>
    <label>Decant Address</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>