force-app/main/default/objects/Contractor_Incident__c/fields/Fault__c.field-meta.xml
<CustomField>
    <fullName>Fault__c</fullName>
    <label>Fault</label>
    <length>255</length>
    <type>Text</type>
</CustomField>