force-app/main/default/objects/Contractor_Incident__c/fields/hx_AI_Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>hx_AI_Enrichment_Status__c</fullName>
    <inlineHelpText>Control Field - Indicates that the record was successfully populated by AI. It may subsequently have been updated by a human or other process.</inlineHelpText>
    <label>AI Enrichment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Enriched</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>