force-app/main/default/objects/Contractor_Incident__c/fields/hx_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>hx_Email_Body__c</fullName>
    <inlineHelpText>This content was directly copied by the custom email handler: email.body</inlineHelpText>
    <label>Email Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>