force-app/main/default/objects/Contractor_Incident__c/fields/hx_Email_From__c.field-meta.xml
<CustomField>
    <fullName>hx_Email_From__c</fullName>
    <label>Email From</label>
    <length>250</length>
    <type>Text</type>
</CustomField>