force-app/main/default/objects/Contractor_Incident__c/fields/hx_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>hx_Email_Subject__c</fullName>
    <inlineHelpText>Control Field - Populated by Apex Custom Email Handler</inlineHelpText>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>