force-app/main/default/objects/Contractor_Incident__c/fields/Incident_Date_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date_as_Text__c</fullName>
    <description>the ISO-8601 string returned by an LLM (e.g., &quot;2026-02-10T17:00:00Z&quot;) often chokes the CLT deserializer if the target is a DateTime type. By using String, we ensure the &quot;All-or-nothing&quot; rule doesn&apos;t trigger a failure.</description>
    <label>Incident Date (as Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>