force-app/main/default/objects/Contractor_Incident__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <label>Job Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>