force-app/main/default/objects/Contractor_Incident__c/fields/Policy_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Policy_Scheme__c</fullName>
    <label>Policy Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>